--- a/conferences/index.html
+++ b/conferences/index.html
@@ -109,7 +109,7 @@
  <!--------------------------------------------------------->
  <!--------------------------------------------------------->
  <li>
-   Co-organized with <a href="https://www.math.lsu.edu/~shipman/">Stephen Shipman</a,
+   Co-organized with <a href="https://www.math.lsu.edu/~shipman/">Stephen Shipman</a>,
    ICERM Hot Topics Workshop on <a href="https://icerm.brown.edu/events/htw-23-agst/">Algebraic Geometry in Spectral Theory</a>,
    24&ndash;26 February 2023.<br>
    <a href="ICERM23/index.html">Reading List</a>.
