--- a/index.html
+++ b/index.html
@@ -175,6 +175,20 @@
      <tr><td> Thursday </td><td>17:00-18:00 </td> </tr>
     <!---------------------------------------------------------------------------------------------------->
   </table>
+  <!---------------------------------------------------------------------------------------------------->
+  <hr>
+  <!---------------------------------------------------------------------------------------------------->
+   <b><FONT SIZE=+1 color=brown>Spring  2025</font></b>
+   <table border=0>
+   <!---------------------------------------------------------------------------------------------------->
+    <tr valign=top><td><font color=brown>MATH 666</font>&nbsp;</td>
+      <td><a href="teaching/25.1"></a>Real Algebraic<br> Geometry for<br>Applications</td>
+      <td align=left>&nbsp;<a href="teaching/25.1/RAGA.txt">Sketch</a> </td>
+      <td colspan=2> Tu-Th 11:10&ndash;12:25.</td><td> Blocker 628
+      </td>
+    </tr>
+    <!---------------------------------------------------------------------------------------------------->
+  </table>
  <!---------------------------------------------------------------------------------------------------->
    <hr>
  <!------------------------------------------------------------------------------->
@@ -395,7 +409,7 @@ pageTracker._trackPageview();
  </tr>
 </table>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Fri Aug 23 16:46:44 CDT 2024 by sottile</p>  
+<p>Last modified: Mon Oct 21 21:46:53 PDT 2024 by sottile</p>  
  </body>
 </html> 
 
