--- a/research/publications.html
+++ b/research/publications.html
@@ -84,8 +84,8 @@ Jump to     <A HREF="#manuscripts">accepted manuscripts</A>,
      <TD valign=center>
        <FONT COLOR="FF00FF">
       <I>A quantum Murnaghan--Nakayama rule for the flag manifold</I></FONT>.
-      With
-       <A HREF="https://sites.google.com/site/carobenedettimath/home">Carolina Benedetti</A>,
+      with
+       <A HREF="https://sites.google.com/site/carobenedettimath">Carolina Benedetti</A>,
        <A HREF="https://bergeron.mathstats.yorku.ca/">Nantel Bergeron</A>,
        <A HREF="https://sites.google.com/view/l-colmenarejo/home">Laura Colmenarejo</A>, and 
        <A HREF="https://professeurs.uqam.ca/professeur/saliola.franco/">Franco Saliola</A>.
@@ -278,7 +278,7 @@ Jump to <A HREF="#preprints">preprints</A>,
        <A HREF="https://tjyahl.github.io/">Thomas Yahl</A>.
        Journal of Software for Algebra and Geometry, 
         14-1 (2024), 87&ndash;95. DOI 10.2140/jsag.2024.14.87.
-         <tt>arXiv.org/2208.05576</tt>.
+        <!-- <tt>arXiv.org/2208.05576</tt>.-->
      </TD>
     </TR>
    </TABLE>
@@ -329,7 +329,7 @@ Jump to <A HREF="#preprints">preprints</A>,
        <a href="https://cecas.clemson.edu/~burr2">Michael Burr</a> and 
        <a href="http://www.math.tamu.edu/~walkere">Elise Walker</A>.
        <i>Mathematics of Computation</i>, <b>92</b>, No. 343, 2333&ndash;2353.
-       <tt>arXiv.org/2008.13055</tt>.
+<!--       <tt>arXiv.org/2008.13055</tt>.  -->
      </TD>
     </TR>
    </TABLE>
@@ -354,7 +354,7 @@ Jump to <A HREF="#preprints">preprints</A>,
        with 
        <a href="http://math.sysu.edu.cn/gagp/czli">Changzheng Li</a>  and
        <a href=""></a>Chi Zhang. Communications in Number Theory and Physics, Volume 17 (2023), Number 1, 77&ndash;101.
-       <tt>arXiv.org:1911.11748</tt>
+<!--       <tt>arXiv.org:1911.11748</tt>.-->
      </TD>
     </TR>
    </TABLE>
@@ -380,7 +380,9 @@ Jump to <A HREF="#preprints">preprints</A>,
       <A HREF="http://personal.cimat.mx:8181/~abraham.mc/Home.html">Abraham Mart&iacute;n del Campo-Sanchez</A>
        and 
     <A HREF="https://www.rose-hulman.edu/academics/faculty/williams-robert-william7.html">Robert Williams</A>.
-      41 pages. <tt>arXiv.org/1902.06809</tt>. Arnold Mathematical Journal, 
+      41 pages.
+<!--      <tt>arXiv.org/1902.06809</tt>. -->
+      Arnold Mathematical Journal, 
       <tt>https://doi.org/10.1007/s40598-022-00221-2</tt>.<br>
      <a href="https://rdcu.be/c3EEZ">Read-only, online version</a>.
      </TD>
@@ -405,7 +407,7 @@ Jump to <A HREF="#preprints">preprints</A>,
      <FONT COLOR="FF00FF"><I>Describing Amoebas</I></FONT>,  
       with <A HREF="http://www.math.tamu.edu/~nisse"></a>Mounir Nisse,   
       <i>Pacific Journal of Mathematics,</i> <b>317</b> No. 1, (2022) 187&ndash;205.
-     <tt>arXiv.org/1805.00273</tt>. 
+<!--     <tt>arXiv.org/1805.00273</tt>.  -->
      </TD>
     </TR>  
    </TABLE>
@@ -433,7 +435,7 @@ Jump to <A HREF="#preprints">preprints</A>,
       <A HREF="">Li Ying</A>.
        Facets of algebraic geometry. Vol. II, London Math. Soc. Lecture Note Ser. {\bf 473}, 
               Cambridge Univ. Press, Cambridge, pp. 336&ndash;366, 2022.
-              <tt>arXiv.org/1910.06843</tt>.
+<!--              <tt>arXiv.org/1910.06843</tt>.-->
      </TD>
     </TR>
    </TABLE>
@@ -485,7 +487,7 @@ Jump to <A HREF="#preprints">preprints</A>,
        <a href="http://people.math.gatech.edu/~tduff3/">Timothy Duff</a> and 
       <A HREF="https://www.benedictine.edu/faculty-staff/hein-nickolas/">Nickolas Hein</A>.
        Journal of Symbolic Computation,  2022.   21 Pages.
-       <tt>arXiv.org/1812.02851</tt>.
+<!--       <tt>arXiv.org/1812.02851</tt>.-->
        <a href="https://doi.org/10.1016/j.jsc.2020.07.010">DOI:10.1016/j.jsc.2020.07.010</a>.
      </TD>
     </TR>
@@ -536,8 +538,9 @@ Jump to <A HREF="#preprints">preprints</A>,
        with 
        <a href="http://www.paulbreiding.org">Paul Breiding</a> and 
        James Woodcock.
-       Foundations of Computational Mathematics.
-       <tt>arXiv:2012.06350</tt>. DOI: 10.1007/s10208-021-09534-8.
+       Foundations of Computational Mathematics. <b>22</b> (2022), 1743&ndash;1765. 
+<!--       <tt>arXiv:2012.06350</tt>. -->
+      DOI: 10.1007/s10208-021-09534-8.
      </TD>
     </TR>
    </TABLE>
@@ -589,7 +592,7 @@ Jump to <A HREF="#preprints">preprints</A>,
         <A HREF="https://tjyahl.github.io/">Thomas Yahl</A>.
         Journal of Software for Algebra and Geometry, Vol. 11 (2021), 53&ndash;59.
         <a href="10.2140/jsag.2021.11.53">DOI: 10.2140/jsag.2021.11.53</a>.
-       <tt>arXiv.org/2006.03154</tt>.
+<!--       <tt>arXiv.org/2006.03154</tt>.-->
      </TD>
     </TR>
    </TABLE>
@@ -609,7 +612,8 @@ Jump to <A HREF="#preprints">preprints</A>,
      <TD><FONT COLOR="FF00FF">
       <I>General witness sets for numerical algebraic geometry</I></FONT>,
        ISSAC '20: Proceedings of the 45th International Symposium on Symbolic and Algebraic Computation, 
-      ACM, July 2020, pp.418&ndash;425. <tt>arXiv:2002.00180.</tt>  
+      ACM, July 2020, pp.418&ndash;425. 
+<!--      <tt>arXiv:2002.00180</tt>. -->  
       <a href="https://doi.org/10.1145/3373207.3403995"><tt>DOI:10.1145/3373207.3403995</tt></a>.
      </TD>
     </TR>
@@ -637,7 +641,8 @@ Jump to <A HREF="#preprints">preprints</A>,
  <A HREF="http://personal.cimat.mx:8181/~abraham.mc/Home.html">Abraham Mart&iacute;n del Campo-Sanchez</A>,
       <A href="http://math.stanford.edu/~vakil/">Ravi Vakil</a> and 
       <A href="http://www.math.uic.edu/~jan/">Jan Verschelde</a>.
-       Mathematics of Computation, <b>90</b> (2021), 1407&ndash;1433.    <tt>arXiv.org/1802.00984</tt>.
+       Mathematics of Computation, <b>90</b> (2021), 1407&ndash;1433.  
+<!--    <tt>arXiv.org/1802.00984</tt>.  -->
      </TD>
     </TR>
    </TABLE>
@@ -662,7 +667,7 @@ Jump to <A HREF="#preprints">preprints</A>,
         <A HREF="http://www.math.gatech.edu/users/aleykin3">Anton Leykin</A> 
        and <a href="https://www.math.wisc.edu/~jose/">Jose Israel Rodriguez</a>.
        Mathematics of Computation, <b>90</b> (2021) No. 327, 413&ndash;430.
-       <tt>ArXiv.org/1908.00899</tt>.
+<!--       <tt>ArXiv.org/1908.00899</tt>.-->
      </TD>
     </TR>
    </TABLE>
@@ -689,7 +694,7 @@ Jump to <A HREF="#preprints">preprints</A>,
       <A HREF="https://math.missouristate.edu/ngocdo.aspx">Ngoc T. Do</A>.
        Journal of Mathematical Physics, <b>61</b>, No. 10, 2020.
        <a href="https://doi.org/10.1063/5.0018562">DOI: 10.1063/5.0018562</a>.  
-       <tt>ArXiv.org/1910.06472</tt>.
+<!--       <tt>ArXiv.org/1910.06472</tt>.-->
      </TD>
     </TR>
    </TABLE>
@@ -700,6 +705,32 @@ Jump to <A HREF="#preprints">preprints</A>,
 
 <!------------------------------------------------------------------------>
  <TR valign=CENTER><TD align=right>24
+</TD> <TD>
+<!------------------------------------------------------------------------>
+<!-----------------      Version of 10 May 2019       -------------------->
+<!------------------------------------------------------------------------>
+<!------------------------------------------------------------------------>
+   <TABLE><TR valign=center>
+     <TD><A HREF="pdf/bivariate.pdf"><IMG SRC="images/pdf.gif"></A></TD> 
+     <TD><A HREF="stories/bivariate/index.html"><IMG SRC="images/abs.gif"></A></TD>  
+      <TD valign=center>
+       <FONT COLOR="FF00FF">
+      <I>Bivariate Semialgebraic Splines</I></FONT>,
+       with
+     <A HREF="https://midipasq.github.io/">Michael Di Pasquale</A>.
+      Journal of Approximation Theory, <b>254</b> (2020) 
+      19 pages. 
+<!--     <tt>ArXiv.org/1905.08438</tt>.  -->
+     </TD>
+    </TR>
+   </TABLE>
+<!--------------------------------------------------------------------->
+  </TD>
+ </TR>
+<!------------------------------------------------------------------------>
+
+<!------------------------------------------------------------------------>
+ <TR valign=CENTER><TD align=right>25
 </TD> <TD>
 <!------------------------------------------------------------------------>
 <!-----------------       Version of 5 January 2019      ------------------->
@@ -718,31 +749,6 @@ Jump to <A HREF="#preprints">preprints</A>,
        <a href="https://www.degruyter.com/view/j/form">Forum Mathematicum</a>, <b>31</b> (2019), 779&ndash;783.
        <tt>arXiv.org/1809.04242</tt>.
        DOI <a href="https://doi.org/10.1515/forum-2018-0213">10.1515/forum-2018-0213</a>
-     </TD>
-    </TR>
-   </TABLE>
-<!--------------------------------------------------------------------->
-  </TD>
- </TR>
-<!------------------------------------------------------------------------>
-
-<!------------------------------------------------------------------------>
- <TR valign=CENTER><TD align=right>25
-</TD> <TD>
-<!------------------------------------------------------------------------>
-<!-----------------      Version of 10 May 2019       -------------------->
-<!------------------------------------------------------------------------>
-<!------------------------------------------------------------------------>
-   <TABLE><TR valign=center>
-     <TD><A HREF="pdf/bivariate.pdf"><IMG SRC="images/pdf.gif"></A></TD> 
-     <TD><A HREF="stories/bivariate/index.html"><IMG SRC="images/abs.gif"></A></TD>  
-      <TD valign=center>
-       <FONT COLOR="FF00FF">
-      <I>Bivariate Semialgebraic Splines</I></FONT>,
-       with
-     <A HREF="https://midipasq.github.io/">Michael Di Pasquale</A>.
-      Journal of Approximation Theory, <b>254</b> (2020) 
-      19 pages.  <tt>ArXiv.org/1905.08438</tt>.
      </TD>
     </TR>
    </TABLE>
