--- a/talks.html
+++ b/talks.html
@@ -119,11 +119,11 @@
 
   <!--------------------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    <FONT COLOR="AA00FF"><I>Periodic graph operators for algebraic geometers</I></font>,
     Plenary talk, <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/">SIAM Conference on Applied
       Algebraic Geometry (AG25)</a>,
     Madison, Wisconsin, 7&ndash;11 July 2025.
-    <a href="talks/24/CPD.txt"></a>
+    <a href="talks/25/AG25.txt">abstract</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
@@ -148,7 +148,26 @@
     9 November 2024. <a href="talks/24/Five-color.txt">abstract</a>.
  </li>
  <!--------------------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>The phase limit set of linear spaces and discriminants</I></font>,
+    Algebra and Combinatorics Seminar, Texas A&amp;M University, 8 November 2024.
+    <a href="talks/21/Discriminant.txt">abstract</a>.  
+   </li>
   <!--------------------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
+  <li> <FONT COLOR="AA00FF"><I>Hyperbolic Soccerballs</I></font>,
+       AIM Mathematics Teachers' Circle, AIM, 24 October 2024.
+     <A HREF="research/stories/hyperbolic_football/index.html">abstract</A>
+ </li>
+ <!--------------------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+ <!--------------------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Periodic Operators for Algebraic Geometers</I></font>,
     Minisymposium on Nonlinear Algebra in Applications,
@@ -158,12 +177,6 @@
     <a href="talks/24/DPO4AG.pdf">text of talk</a>.
  </li>
  <!---------------------------------------------------------------------------------------------------->
- <!--------------------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
-  <!--------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
  <li>
     <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
@@ -171,7 +184,7 @@
     <a href="talks/24/Shape.txt">Abstract</a>.
  </li>
  <!---------------------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Colloquium, Benedictine College, 7 October 2024.
       <a href="talks/23/SAGA.txt">Abstract</a>. 
@@ -198,7 +211,7 @@
     <FONT COLOR="AA00FF"><I>Frontiers of Arithmetic in Enumerative Geometry</I></font>, 
     <a href="https://www.birs.ca/events/2024/5-day-workshops/24w5229">Computational Geometry</a>,
     BIRS, Banff, Alberta Canada, 
-    2X June 2024.
+    23&ndash;28 June 2024.
     <a href="talks/24/Frontiers.txt">abstract</a>
   </li>
   <!---------------------------------------------------------------------------------------->
@@ -567,7 +580,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Sat Sep 07 14:51:35 CDT 2024 by sottile</p>  
+<p>Last modified: Sat Oct 26 09:43:48 PDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
