updating web page

--- a/teaching/24.2/Toric.html
+++ b/teaching/24.2/Toric.html
@@ -83,9 +83,10 @@ commutative algebra and algebraic geometry will be helpful.
  (But I will mention exercises, which are intended for you to fill in 
   gaps in the presentation, thereby learning a bit more.)
  At the end of the term, students will present projects.
- Here is a  <a href="Projects.txt">file with some suggestions</a>.
+<!~-- Here is a  <a href="Projects.txt">file with some suggestions</a>.-->
  <br>
- While I do not collect written work, here are some <a href="Exercises.pdf">exercises</a>.
+ While I do not collect written work, here are some <a href="Exercises.pdf">exercises</a>.<br>
+ Here is information about <Ma href="Projects.html">the presentations</a>.
 </p>
 <!---------------------------------------------------------------------------->
 <hr>
