--- a/teaching/24.2/Toric.html
+++ b/teaching/24.2/Toric.html
@@ -86,7 +86,7 @@ commutative algebra and algebraic geometry will be helpful.
 <!~-- Here is a  <a href="Projects.txt">file with some suggestions</a>.-->
  <br>
  While I do not collect written work, here are some <a href="Exercises.pdf">exercises</a>.<br>
- Here is information about <Ma href="Projects.html">the presentations</a>.
+ Here is information about <a href="Projects.html">the presentations</a>.
 </p>
 <!---------------------------------------------------------------------------->
 <hr>
