--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
   <TR valign=top>
     <td colspan=2><b>News:</b>
 
+      I am helping to organize a program at the <a href="https://www.ipam.ucla.edu/">IPAM</a>
+      on <font color="AA00FF">Numerical Algebraic Geometry and Correlated Electrons:  Generalized Grassmannians, Response Functions and
+      Excited States</font>.  This will occur one of the two semesters in the academic year 2026&ndash;7.<br>
+      
       I am now the Director of Honors and Undergraduate Research for the Department of Mathematics.<br>
       
      </td>
@@ -409,7 +413,7 @@ pageTracker._trackPageview();
  </tr>
 </table>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Mon Oct 21 21:46:53 PDT 2024 by sottile</p>  
+<p>Last modified: Sat Nov 09 10:31:44 CST 2024 by sottile</p>  
  </body>
 </html> 
 
