--- a/teaching/24.2/Projects.html
+++ b/teaching/24.2/Projects.html
@@ -31,13 +31,17 @@
 <!---------------------------------------------------------------------------------------------------->
 <h2>Tuesday, December 3</h2>
 
-9:00 &mdash; 11:30 AM  Blocker 302
+9:00 &mdash; 11:30 AM  Blocker 117
 
-<ul>
-<li> </li>
-
-
-</ul>
+<table border=1>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+</table>
 
 <!---------------------------------------------------------------------------------------------------->
 <hr>
@@ -45,12 +49,21 @@
 <h2>Wednesday, December 4</h2>
 
 
-13:00 &mdash; 15:30   Blocker 302
+13:00 &mdash; 15:30   Blocker 117
 
-<ul>
-<li> </li>
+<table border=1>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+</table>
 
-</ul>
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
@@ -80,6 +93,7 @@
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
+
 <address></address>
 <i><font color="AA00AA">
 <!-- hhmts start -->Last modified: Th Nov 07 08:10 CST 2024 <!-- hhmts end -->
