--- a/conferences.html
+++ b/conferences.html
@@ -108,6 +108,21 @@
 <UL>
  <!---------------------------------------------------------------------------------------------------->
  <li>
+   <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/"></a>Numerical Algebraic Geometry and Correlated Electrons:
+   Generalized Grassmannians, Response Functions and Excited States,
+   Long program at the <a href="https://www.ipam.ucla.edu/">Institute for Pure and Applied Mathematics</a>, one semester in the
+   2026&ndash;2027 academic year.
+   Organizers: Guido von Rudorff,
+   Fabian M. Faulstich,
+   Todd J. Mart&iacute;nez,
+   Frank Sottile,
+   Bernd Sturmfels,
+   Martin St&ouml;hr,
+   Julia Westermayr.
+ </li>
+ <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
    <a href="https://www.siam.org/conferences-events/siam-conferences/ag25/">SIAM Conference on Applied
       Algebraic Geometry (AG25)</a>,
    University of Wisconsin,
@@ -172,7 +187,7 @@
 <address></address>
 <!-- hhmts start Last modified: Sat Mar 18 09:34:04 CET 2023 <!-- hhmts end -->
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Tue Oct 08 08:16:18 CDT 2024 by sottile</p>  
+<p>Last modified: Sat Nov 09 10:29:34 CST 2024 by sottile</p>  
 <!---------------------------------------------------------------------------------------------------->
 
 </body> </html>
