--- a/teaching/24.2/Projects.html
+++ b/teaching/24.2/Projects.html
@@ -36,9 +36,30 @@
 <table border=1>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td>9:00&ndash;9:30</td><td>&nbsp;</td>
+    <td>Arithmetic toric varieties</td>
+    <td>Somak Dutta and Jordy Lopez</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td>9:40&ndash;10:10</td><td>&nbsp;</td>
+    <td>Differential algebras on toric varieties</td>
+    <td>Michael Keeler and Yaoze Zou</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td>10:20&ndash;10:50</td><td>&nbsp;</td>
+    <td>SAGBI bases and toric varieties</td>
+    <td>Pooja Joshi and Zijin Xiao</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td>11:00&ndash;11:30</td><td>&nbsp;</td>
+    <td>Stanley's <i>g</i>-Theorem </td>
+    <td>Derek Wu and Abishek Hariharan</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
 </table>
@@ -54,9 +75,23 @@
 <table border=1>
   <!---------------------------------------------------------------------------------------------------->
   <tr>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td>13:00&ndash;13:30</td><td>&nbsp;</td>
+    <td>Divisors on Toric Varieties </td>
+    <td>John Ajayi and Manasi Gore</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td>13:45&ndash;14:15</td><td>&nbsp;</td>
+    <td>Multigraded Hilbert Scheme</td>
+    <td>CJ Bott and Phil Speegle</td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td>14:30&ndash;15:00</td><td>&nbsp;</td>
+    <td>Toric Varieties Package in Macaulay2</td>
+    <td>Paul Dessauer and Daniel Dale</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
 </table>
