--- a/teaching/25.1/RAG.html
+++ b/teaching/25.1/RAG.html
@@ -1,17 +1,12 @@
-<HTML><HEAD><TITLE>Math 662, Real Algebraic Geometry for Applications</TITLE></HEAD>
+<HTML><HEAD><TITLE>Math 666, Real Algebraic Geometry</TITLE></HEAD>
 <BODY BGCOLOR="#FFFFFF"  alink="#FFFFFF">
 <A NAME="top"></A>
 <!-------------------------------------------------------------->
- <H1>Fall 2019<BR>
-  Math 662:  Real Algebraic Geometry for Applications
+ <H1>Spring 2025<BR>
+  Math 666:  Real Algebraic Geometry
  </H1>
 
- <!--------------------------------------------------------->
- <li>
-   <a href="http://faculty.smu.edu/sxu/SIAMTXLA19/index.html">The 2nd Annual Meeting of SIAM Texas-Louisiana Section</a>, 1&ndash;3 November 2019,
- Southern Methodist University, Dallas, Texas.
-  </li>
- <!--------------------------------------------------------->
+<!--------------------------------------------------------->
   
 <HR>
 <!-------------------------------------------------------------->
