--- a/research/stories/LGalois/index.html
+++ b/research/stories/LGalois/index.html
@@ -31,6 +31,10 @@
 <!---------------------------------------------------------------------------------------------------->
 <hr>
 <!---------------------------------------------------------------------------------------------------->
+<a href="LG5.html">Raw data for LG5</a>
+<!---------------------------------------------------------------------------------------------------->
+<hr>
+<!---------------------------------------------------------------------------------------------------->
 <p>There are 44 essential Schubert problems on the Lagrangian Grassmannian of isotropic 4-planes in 8-space, LG(4).
 (By essential, we mean that they do not reduce to a smaller Lagrangian Grassmannian, and have more than two solutions.)
 Of these three have been determined to be enriched in that they do not have full symmetric Galois groups.
@@ -94,33 +98,35 @@ The three enriched problems all have different Galois groups, and these are disc
   <tr valign=top>
     <td colspan=4 align=center>
     <font color=#0000ff size=+2><img src="Tableaux/3.Small.gif">&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<img src="Tableaux/1.Small.gif"> = 4 in LG(4) </font> </td>
-   </tr>  <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr>  <tr>
+  </tr>  <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr>
+  <!-------------------------------------------------->
+  <tr>
     <td>&nbsp;4 </td>
     <td align=right> 201551&nbsp;</td>
     <td align=right> 0.2519&nbsp;</td>
     <td align=right> 2.0155&nbsp;</td>
-  </td>
-  <!-------------------------------------------------->
-  <tr>
-    <td>&nbsp;1,1,2 </td>
-    <td align=right> 199196&nbsp;</td>
-    <td align=right> 0.2490&nbsp;</td>
-    <td align=right> 1.9920&nbsp;</td>
-  </td>
+  </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;2,2 </td>
     <td align=right> 299875&nbsp;</td>
     <td align=right> 0.3748&nbsp;</td>
     <td align=right> 2.9987&nbsp;</td>
-  </td>
+  </tr>
+  <!-------------------------------------------------->
+  <tr>
+    <td>&nbsp;1,1,2 </td>
+    <td align=right> 199196&nbsp;</td>
+    <td align=right> 0.2490&nbsp;</td>
+    <td align=right> 1.9920&nbsp;</td>
+  </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;1,1,1,1 </td>
     <td align=right> 99378&nbsp;</td>
     <td align=right> 0.1242&nbsp;</td>
     <td align=right> 0.9938&nbsp;</td>
-  </td>
+  </tr>
   <!-------------------------------------------------->
   <tr>
     <td colspan=4><font size=+1> This computed 800000 Frobenius elements </font></td>
@@ -134,54 +140,56 @@ The three enriched problems all have different Galois groups, and these are disc
   <tr valign=top>
     <td colspan=4 align=center>
     <font color=#0000ff size=+2><sub><img src="Tableaux/21.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<sub><img src="Tableaux/21.Small.gif"></sub>&middot;<img src="Tableaux/1.Small.gif"> = 8 in LG(4) </font> </td>
-   </tr>  <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr>  <tr>
-    <td>&nbsp;1,1,1,1,2,2 </td>
-    <td align=right> 186420449&nbsp;</td>
-    <td align=right> 0.0932&nbsp;</td>
-    <td align=right> 17.8964&nbsp;</td>
-  </td>
-  <!-------------------------------------------------->
-  <tr>
-    <td>&nbsp;1,1,3,3 </td>
-    <td align=right> 333472372&nbsp;</td>
-    <td align=right> 0.1667&nbsp;</td>
-    <td align=right> 32.0133&nbsp;</td>
-  </td>
+   </tr>  <tr valign=top> <th>Cycle type</th> <th>Frequency</th> <th>Fraction</th> <th>Empirical</th>  </tr> 
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;4,4 </td>
     <td align=right> 626184386&nbsp;</td>
     <td align=right> 0.3131&nbsp;</td>
     <td align=right> 60.1137&nbsp;</td>
-  </td>
-  <!-------------------------------------------------->
-  <tr>
-    <td>&nbsp;1,1,2,4 </td>
-    <td align=right> 249921255&nbsp;</td>
-    <td align=right> 0.1250&nbsp;</td>
-    <td align=right> 23.9924&nbsp;</td>
-  </td>
+  </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;2,6 </td>
     <td align=right> 334051444&nbsp;</td>
     <td align=right> 0.1670&nbsp;</td>
     <td align=right> 32.0689&nbsp;</td>
-  </td>
+  </tr>
   <!-------------------------------------------------->
+  <tr>
+    <td>&nbsp;1,1,3,3 </td>
+    <td align=right> 333472372&nbsp;</td>
+    <td align=right> 0.1667&nbsp;</td>
+    <td align=right> 32.0133&nbsp;</td>
+  </tr>
+  <!-------------------------------------------------->
+  <tr>
+    <td>&nbsp;1,1,2,4 </td>
+    <td align=right> 249921255&nbsp;</td>
+    <td align=right> 0.1250&nbsp;</td>
+    <td align=right> 23.9924&nbsp;</td>
+  </tr>
+ <!-------------------------------------------------->
   <tr>
     <td>&nbsp;2,2,2,2 </td>
     <td align=right> 259801406&nbsp;</td>
     <td align=right> 0.1299&nbsp;</td>
     <td align=right> 24.9409&nbsp;</td>
-  </td>
+  </tr>
+  <!-------------------------------------------------->
+  <tr>
+    <td>&nbsp;1,1,1,1,2,2 </td>
+    <td align=right> 186420449&nbsp;</td>
+    <td align=right> 0.0932&nbsp;</td>
+    <td align=right> 17.8964&nbsp;</td>
+  </tr>
   <!-------------------------------------------------->
   <tr>
     <td>&nbsp;1,1,1,1,1,1,1,1 </td>
     <td align=right> 10148688&nbsp;</td>
     <td align=right> 0.0051&nbsp;</td>
     <td align=right> 0.9743&nbsp;</td>
-  </td>
+  </tr>
   <!-------------------------------------------------->
   <tr>
     <td colspan=4><font size=+1> This computed 2000000000 Frobenius elements </font></td>
