--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
    <table border=0>
    <!---------------------------------------------------------------------------------------------------->
     <tr valign=top><td><font color=brown>MATH 666</font>&nbsp;</td>
-      <td><a href="teaching/25.1"></a>Real Algebraic<br> Geometry for<br>Applications</td>
+      <td><a href="teaching/25.1/RAGA.html">Real Algebraic<br> Geometry for<br>Applications</a></td>
       <td align=left>&nbsp;<a href="teaching/25.1/RAGA.txt">Sketch</a> </td>
       <td colspan=2> Tu-Th 11:10&ndash;12:25.</td><td> Blocker 628
       </td>
