--- a/teaching/24.2/Toric.html
+++ b/teaching/24.2/Toric.html
@@ -83,7 +83,7 @@ commutative algebra and algebraic geometry will be helpful.
  (But I will mention exercises, which are intended for you to fill in 
   gaps in the presentation, thereby learning a bit more.)
  At the end of the term, students will present projects.
-<!~-- Here is a  <a href="Projects.txt">file with some suggestions</a>.-->
+<-- Here is a  <a href="Projects.txt">file with some suggestions</a>.-->
  <br>
  While I do not collect written work, here are some <a href="Exercises.pdf">exercises</a>.<br>
  Here is information about <a href="Projects.html">the presentations</a>.
@@ -215,8 +215,7 @@ commutative algebra and algebraic geometry will be helpful.
 
 <hr>
 <!---------------------------------------------------------------------------->
-<address></address>
-<i><font color="AA00AA">
-<!-- hhmts start -->Last modified: Tu Aug 20 08:10 CDT 2024 <!-- hhmts end -->
-</i></font>
+<p>Last modified: Sat Nov 09 10:31:44 CST 2024 by sottile</p>  
+
 </body> </html>
+ 
