--- a/conferences.html
+++ b/conferences.html
@@ -90,8 +90,8 @@
  <!------------------------------------------------------------->
  The MEGA conferences (Effective Metheods in Algebraic Geometry)
     now have a permanent <a href="https://mega.sciencesconf.org/">web site</a> <BR>
-    I am one of the Co-chairs of the Executive Committee for
-    <a href="https://www.mis.mpg.de/calendar/conferences/2024/mega.html">MEGA 2024</a>, along with Kaie Kubjas.
+    I am a member of the the  Executive Committee for
+    <a href="https://www.mis.mpg.de/calendar/conferences/2024/mega.html"></a>MEGA 2026.
   <td align=left>
 <!----------------------------------------------------------------------------->
 <!----------------------------------------------------------------------------->
@@ -141,6 +141,12 @@
    <a href="http://www.ims.cuhk.edu.hk/activities/conferences/mist/2025/">Schubert Calculus and Related Topics</a>,
    12&ndash;18 March 2025.
    Chinese University of Hong Kong.
+ </li>  
+ <!---------------------------------------------------------------------------------------------------->
+ <li>
+   <a href="https://people.tamu.edu/~jml//symmetries-texas/main.html">Symmetries and Singularities in Texas</a>,
+   31 January&ndash;2 February 2025.
+   Texas A&amp;M University.
  </li>  
  <!---------------------------------------------------------------------------------------------------->
   <li> AMS Special session on
