--- a/teaching/25.1/RAGA.html
+++ b/teaching/25.1/RAGA.html
@@ -80,7 +80,7 @@ possibly concurrent.
              S Müller, E Feliu, G Regensburger, C Conradi, A Shiu, A Dickenstein<br>
               Foundations of Computational Mathematics 16 (1), 69-97 2016.
        </li>
-       
+      <!-- https://arxiv.org/abs/2411.10776  Wronski Pairs of Honeycomb Curves -->
      </ul>
    </TD>
  </TR>
