--- a/talks.html
+++ b/talks.html
@@ -106,7 +106,7 @@
  <!------------------------------------------------>
 </table>
 <!-------------------------------------------------------------------->
-  </td>
+ </td>
  </tr>
  <!---------------------------------------------------------------------------------------------------->
  <tr>
@@ -126,6 +126,11 @@
     <a href="talks/25/AG25.txt">abstract</a>.
    </li>
   <!--------------------------------------------------------------------------------------------------->
+  <li>
+    <font COLOR="AA00FF"><i></i>TBA</font>,
+    <a href="http://www.ims.cuhk.edu.hk/activities/conferences/mist/2025/mist_workshop_12-18mar2025/">Schubert calculus and
+      related topics</a>, MIST 2025 Workshop, The Chinese University of Hong Kong, 12&ndash;18 March 2025.
+  </li>
   <!--------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The Critical Point Degree of a Periodic Graph</I></font>,
@@ -141,8 +146,14 @@
     AMS-AustMS-NZMS International Meeting  in Auckland, New Zealand, taking place December 9&ndash;13, 2024.
     <a href="talks/24/CPD.txt">Abstract</a>
    </li>
-  <!--------------------------------------------------------------------------------------------------->
- <!---------------------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+ <!--------------------------------------------------------------------------------------------------->
+ <!--------------------------------------------------------------------------------------------------->
  <li> <FONT COLOR="AA00FF"><I>The Five-Color Theorem</I></font>,
    <a href="https://mathcircle.tamu.edu/">TAMU Math Circle&ndash;Advanced</a>,
     9 November 2024. <a href="talks/24/Five-color.txt">abstract</a>.
@@ -154,18 +165,12 @@
     Algebra and Combinatorics Seminar, Texas A&amp;M University, 8 November 2024.
     <a href="talks/21/Discriminant.txt">abstract</a>.  
    </li>
-  <!--------------------------------------------------------------------------------------------------->
+  <!-------------------------------------------------------------------------------------------------->
  <!--------------------------------------------------------------------------------------------------->
   <li> <FONT COLOR="AA00FF"><I>Hyperbolic Soccerballs</I></font>,
        AIM Mathematics Teachers' Circle, AIM, 24 October 2024.
      <A HREF="research/stories/hyperbolic_football/index.html">abstract</A>
  </li>
- <!--------------------------------------------------------------------------------------------------->
- <!--------------------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
  <!--------------------------------------------------------------------------------------------------->
  <!--------------------------------------------------------------------------------------------------->
   <li>
