updated a few things

--- a/advising/index.html
+++ b/advising/index.html
@@ -241,6 +241,12 @@
  <!-----------             Current Students             ------------->
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+  <li>
+      <A HREF=""></a>Ruzho Sagayaraj, 2024&ndash;
+  </li>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
   <li>
     <A HREF=""></a>Somak Dutta, 2023&ndash;
   </li>
@@ -255,15 +261,21 @@
     <A HREF=""></a>C.J. Bott, 2020&ndash;
   </li>
  <!------------------------------------------------------------------>
- <!------------------------------------------------------------------>
-  <li>
-     <A HREF="http://mattfaust.github.io//">Matthew Faust</a>, 2019&ndash;2024.
-   </li>
  <BR>
  <!------------------------------------------------------------------>
  <!-----------             Completed Theses             ------------->
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+  <li>
+     <A HREF="http://mattfaust.github.io//">Matthew Faust</a>, 2019&ndash;2024. (Ph.D. 2024).
+    <table>
+    <tr><td></td><td></td>
+     <td>Postdoc at Michigan State University.</td> 
+    </tr>
+    </table>
+   </li>
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
     <li>
