--- a/conferences.html
+++ b/conferences.html
@@ -127,6 +127,8 @@
       Algebraic Geometry (AG25)</a>,
    University of Wisconsin,
    7  &ndash; 11 July 2025.
+   <a href=" https://meetings.siam.org/sess/dsp_programsess.cfm?SESSIONCODE=82528">Preliminary Information about conference
+   program</a>.
  </li>
  <!---------------------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------------------->
