--- a/index.html
+++ b/index.html
@@ -148,40 +148,6 @@
   <!---------------------------------------------------------------------------------------------------->
   <hr>
   <!---------------------------------------------------------------------------------------------------->
-   <b><FONT SIZE=+1 color=brown>Fall  2024</font></b>
-   <table border=0>
-   <!---------------------------------------------------------------------------------------------------->
-    <tr valign=top><td><font color=brown>MATH 666</font></td>
-      <td><a href="teaching/24.2/Toric.html">Toric Varieties</a></td>
-      <td align=left><a href="teaching/24.2/Toric.txt">Outline</a> </td>
-      <td colspan=2> Tu-Th 9:35&ndash;10:50. Blocker 306
-      </td>
-    </tr>
-    <!-------------------------------------------------->
-    <tr valign=top><td colspan=3 rowspan=2><font color=blue><b>Office Hours:</b></font> Blocker 601L</td>
-     <td> Mondays </td><td>14:00-15:00 </td>
-    </tr>
-    <!-------------------------------------------------->
-     <tr><td>  Tuesdays </td><td>11:00-12:00 </td> </tr>
-     <!-------------------------------------------------->
-     <tr><td></td><td colspan=4><hr></td></tr>
-    <!-------------------------------------------------->
-   <tr valign=top>
-     <td colspan=3><font color=blue><b>Honors Advising:</b></font></td>
-     <td> Mondays </td><td>13:00-14:00</td>
-    </tr>
-    <!-------------------------------------------------->
-     <tr valign=top><td rowspan=3></td>     <td colspan=2 rowspan=3>Blocker 601L</td>
-      <td> Tuesday </td><td>17:00-18:00  </td> </tr>
-    <!-------------------------------------------------->
-     <tr><td> Wednesday </td><td>17:00-18:00 </td> </tr>
-    <!-------------------------------------------------->
-     <tr><td> Thursday </td><td>17:00-18:00 </td> </tr>
-    <!---------------------------------------------------------------------------------------------------->
-  </table>
-  <!---------------------------------------------------------------------------------------------------->
-  <hr>
-  <!---------------------------------------------------------------------------------------------------->
    <b><FONT SIZE=+1 color=brown>Spring  2025</font></b>
    <table border=0>
    <!---------------------------------------------------------------------------------------------------->
@@ -191,11 +157,31 @@
       <td colspan=2> Tu-Th 11:10&ndash;12:25.</td><td> Blocker 628
       </td>
     </tr>
+     <!-------------------------------------------------->
+    <tr valign=top><td colspan=3 rowspan=1><font color=blue><b>Office Hours:</b></font> Blocker 601L</td>
+     <td>  </td><td> </td>
+    </tr>
+    <!-------------------------------------------------->
+<!--     <tr><td>  Tuesdays </td><td>11:00-12:00 </td> </tr>-->
+     <!-------------------------------------------------->
+     <tr><td></td><td colspan=4><hr></td></tr>
+    <!-------------------------------------------------->
+   <tr valign=top>
+     <td colspan=3><font color=blue><b>Honors Advising:</b></font></td>
+     <td> </td><td></td>
+    </tr>
+    <!-------------------------------------------------->
+     <tr valign=top><td rowspan=3></td>     <td colspan=2 rowspan=3>Blocker 601L</td>
+      <td>  </td><td> </td> </tr>
+    <!-------------------------------------------------->
+<!--     <tr><td> Wednesday </td><td>17:00-18:00 </td> </tr> -->
+    <!-------------------------------------------------->
+<!--     <tr><td> </td><td>17:00-18:00 </td> </tr>-->
     <!---------------------------------------------------------------------------------------------------->
   </table>
- <!---------------------------------------------------------------------------------------------------->
-   <hr>
- <!------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <hr>
+  <!---------------------------------------------------------------------------------------------------->
   <table>
     <tr>
      <td colspan=2><b><FONT SIZE=+1 color=brown>Seminars:</font></b>
@@ -211,8 +197,8 @@
      <td><a href="https://www.math.tamu.edu/seminars/cag/">Combinatorial Algebraic Geometry</a>
      </td>
      <td width=30></td>
-     <td>Fridays 10:30&ndash;11:20&nbsp;&nbsp;</td>
-     <td>Blocker 306</td>
+     <td></td>
+     <td></td>
    </tr>
    </tr>
       <tr> <td>&nbsp;</td>
