--- a/research/collaborators.html
+++ b/research/collaborators.html
@@ -39,10 +39,10 @@ I have had the good fortune to work with the following mathematicians.
                            <Sturmfels>
                            <Theobald>
  orange     Five papers    <Garcia-Puente>
-                           <Nisse>
                            <Rodriguez>
                            <Hillar>                           
   pink       Six papers    <Leykin>
+                           <Nisse>
   brown      Seven papers  <Bihan> 
                            <Hauenstein>                      
   magenta    Eight papers  <Hein> 
@@ -352,8 +352,8 @@ I have had the good fortune to work with the following mathematicians.
     <A HREF="http://www.matthewniemerg.com">Matt Niemerg</a>,   IBM.
 
 <!-- phaselimit 2013  nonarchimedean 2014  convexity 2014  tconvex 2014  Describing 2018
-      A-Discr ??   HigherOrder ????-->
-<dd><IMG SRC="images/dots/five.png">
+      Discriminant 2024   HigherOrder ????-->
+<dd><IMG SRC="images/dots/six.png">
      <a href="https://sites.google.com/site/mounirnisse1/">Mounir Nisse</a>, Xiamen University Malaysia.
 
 <!-- hessian 2007 -->
