--- a/service/letters.html
+++ b/service/letters.html
@@ -76,11 +76,10 @@ Please try to keep the following in mind:
  
 </ul>
 
-Lastly, I can write a letter extremely quickly in an emergency (and do so more often than
-I would like to admit), but please do not count on this.
-It is extremely difficult to drop everything and write a good letter, but not completely impossible.
-
-
+<font color=red>
+  I can no longer write a new letter without several week's notice.
+  I used to do this occasionally, but my good will has been taken advantage of too many times.
+</font>
   
 </font>
 
@@ -88,7 +87,7 @@ It is extremely difficult to drop everything and write a good letter, but not co
 
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Thu Sep 13 09:35:02 EDT 2018 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Wed Dec 4 03:35:02 CST 2024 <!-- hhmts end -->
 <!---------------------------------------------------------------------------->
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
