--- a/CV.html
+++ b/CV.html
@@ -1,4 +1,4 @@
-!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <HTML>
 <HEAD>
    <TITLE>Curriculum Vitae, Frank Sottile</TITLE>
