--- a/talks/talks.html
+++ b/talks/talks.html
@@ -11,13 +11,13 @@
 An <A HREF="selected_talks.html">abridged</A> list.
 <BR>
 <!---  Lots of talks.                                     --->
-<!---  71 Major invited talks  (+5, as 2 were series)     --->
+<!---  82 Major invited talks  (+5, as 2 were series)     --->
 <!---   7 Refereed Conferences                            --->
 <!---  84 Other conferences                               --->
-<!---  88 Colloquia                                       --->
-<!---  11 Short Courses   ( +37, as they were courses)    --->
-<!--- 208 Seminar talks   ( +1 some double talks)         --->
-<!--  469 + 43   total                                    --->
+<!---  92 Colloquia                                       --->
+<!---  13 Short Courses   ( +41, as they were courses)    --->
+<!--- 220 Seminar talks   ( +1 some double talks)         --->
+<!--  498 + 47   total                                    --->
 <!---   3 Plenary type Outreach                           --->
 <!---  39 Middle School Outreach                          --->
 <!---  58 High School Outreach                            --->
@@ -25,7 +25,7 @@ An <A HREF="selected_talks.html">abridged</A> list.
 <!---  40 Presentations to Postgraduates                  --->
 <!---   7 Outreach Professional Presentations             --->
 <!--  190 Outreach talks in total                         --->
-<!--- 637 (+ 43) talks in all                             --->
+<!--- 688 (+ 43) talks in all                             --->
 
 <BR>
 <BR>
@@ -39,6 +39,93 @@ Jump to <!-- <A HREF="#invited">invited talks</A>, -->
         <A HREF="#courses">short courses</A>, or
         <A HREF="#seminar">research seminars</A>.
 <UL>
+ <!-------------------------------   vvvvv  82  vvvvvv   ---------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
+    Invited talk, <a href="https://img.idu.edu.tr/">&#304;zmir Mathematics Days V</a>.
+    September 28 2023,
+    <a href="talks/23/NMSU_Colloq.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+  </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>A Murnaghan-Nakayama rule in quantum Schubert calculus</I></font>,
+  <a href="https://sites.google.com/view/schubertsummerschool2023/">Schubert Conference Summer 2023</a>, 13&ndash;22 June
+  2023.    <a href="talks/23/qMN.txt">Abstract</a>. 
+  </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Three hard polynomial systems from enumerative geometry</I></font>
+   <a href="https://www.mis.mpg.de/calendar/conferences/2023/shps23.html">Solving hard polynomial systems</a>,
+   MPI-MiS, 3-4 April 2023.
+   <a href="talks/23/MPI_SPS.txt">abstract</a>.  <!-- &nbsp;  <a href="talks/23/JMM.pdf">text of talk</a>.-->
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+ <li>
+   <FONT COLOR="AA00FF"><I>Critical Points Of Discrete Periodic Operators</I></font>, 
+   <a href="https://sites.google.com/view/ccaaggs-22/home">Combinatorial, Computational, and Applied Algebraic Geometry</a>,
+   University of Washington, Seattle.
+   27 June&ndash;1 July 2022.
+   <a href="talks/22/CCAAGS.txt">abstract</a>.   <a href="talks/22/CCAAGS.pdf">text of talk</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Toric Geometry in Spectral Theory</I></font>
+    Mathematisches Forschungsinstitut Oberwolfach, 1 April 2022.
+   <a href="talks/22/MFO.txt">abstract</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+ <li>
+   <FONT COLOR="AA00FF"><I>The phase limit set of linear spaces and discriminants</I></font>
+   <a href="https://sites.google.com/site/cotterillethan/ethan-cotterill-eng/latin-american-real-and-tropical-geometry-seminar">LAGARTOS Seminar</a>,
+     28 January 2022.
+   <a href="talks/21/Discriminant.txt">abstract</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Applications of Bernstein's Other Theorem</I></font>
+   <a href="http://wiki.siam.org/siag-ag/index.php/Webinar">SIAM SAGA Seminar</a>, 10 August 2021.
+   <a href="talks/21/BOT.txt">abstract</a>.   <a href="talks/21/SAGA.html">pictures from the talk</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!-------------------------------   vvvvv  75  vvvvvv   ---------------------------------->
+ <!---------------------------------------------------------------------------------------->
+ <li>
+   <FONT COLOR="AA00FF"><I>Real algebraic geometry in spectral theory</I></font>
+   <a href="https://www.math.sciences.univ-nantes.fr/fr/activit%c3%a9s/6312">Facets of Real Algebraic Geometry</a>,
+   Nantes, 21&ndash;25 June 2021.
+   <a href="talks/21/FRAG.txt">abstract</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+ <li>
+   <FONT COLOR="AA00FF"><I>Higher convexity of tropical objects</I></font>
+   <a href="http://m.mathnet.ru/php/conference.phtml?confid=1939&option_lang=eng">Multidimensional residues and tropical geometry</a>,
+   Sirius Mathematics Center, Sochi 14&ndash;18 June 2021.
+   <a href="talks/21/tconvex.txt">abstract</a>
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Some Basic Questions About Amoebae</I></font>
+   Conference in honor of Thorsten Theobald, 12 June 2021.
+   <a href="talks/21/Thorsten.txt">abstract</a>.
+   Some <a href="talks/21/Thorsten.html">pictures</a> from the talk.
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Euclidean Distance Degree via Mixed Volume</I></font>
+   Degeneracy Loci and Applications, Ohio State University, 4&ndash;7 May 2021.
+   <a href="talks/21/EDD.txt">abstract</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
  <li>
    <FONT COLOR="AA00FF"><I>Irrational toric varieties and the secondary polytope</I></font>
@@ -1263,6 +1350,37 @@ Jump to <A HREF="#invited">invited talks</A>,
         <AHREF="#courses">short courses</A>, or
         <A HREF="#seminar">research seminars</A>.
 <UL>
+  <!---------------------------    vvv 92 vvv   -------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
+    Colloquium, UT Dallas.
+    December 1 2023,
+    <a href="talks/23/GGEGA.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+  </li>
+  <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
+    Colloquium, Department of Mathematics, New Mexico State University.
+    September 22 2023,
+    <a href="talks/23/NMSU_Colloq.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+  </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry and Applications</I></font>
+   Colloquium, University of Michigan, 14 February 2023.
+   <a href="talks/23/GGEGA.txt">Abstract</a>. &nbsp; <a href="talks/23/UMich.pdf">text of talk</a>.
+  </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry and Applications</I></font>
+   Colloquium, University of Pittsburgh, 21 October 2022.
+   <a href="talks/22/Pitt.txt">Abstract</a> &nbsp; <a href="talks/22/Pitt.pdf">text of talk</a>.
+  </li>
+ <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
  <li>
   <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry and Applications</I></font>,
@@ -1811,7 +1929,22 @@ Jump to <A HREF="#invited">invited talks</A>,
         <A HREF="#seminar">research seminars</A>.
 <UL>
 
- <!------------------------------------------------------------------>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Tutorials: The Geometry of Grassmannians</I></font>,
+  <a href="https://sites.google.com/view/schubertsummerschool2023/">Schubert Conference Summer 2023</a>, 13&ndash;22 June
+  2023.    <a href="talks/23/SchubertTutorials.txt">abstract</a>
+  </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+ <li>
+   <FONT COLOR="AA00FF"><I>Quasi-symmetric functions and Hopf Algebras</I></font> &nbsp;  A course of 4 lectures at:
+   <a href="http://cimpa-bobo2021.u-naziboni.bf/">CIMPA-Bobo<a> CIMPA Research School "Combinatoire des mots, combinatoire
+   alg&eacute;brique, et exploration informatique avec Sage", 18&ndash;29 October 2021, Universit&eacute; Nazi Boni,
+   Burkina Faso.
+ </li>
+ <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
  <li> <FONT COLOR="AA00FF"><I>Introduction to Toric Varieties</I></font>,
        a short course in four lectures, 
@@ -1919,6 +2052,88 @@ Jump to <A HREF="#invited">invited talks</A>,
         <A HREF="#courses">short courses</A>, or
         <A HREF="#colloquiua">colloquiua</A>.
 <UL>
+ <!------------------------------  vvvv   220    vvvv     ---------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators</I></font>
+    <a href="https://environment.harvard.edu/event/widely-applied-mathematics-seminar">Widely Applied Mathematics Seminar</a>,
+     Harvard University, 26 October 2023. 
+   <a href="talks/23/CPoDPO.txt">abstract</a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
+  </li>
+  <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Critical Points Of Discrete Periodic Operators</I></font>,
+    Algebra Seminar, New Mexico State University.
+    September 22 2023,
+    <a href="talks/23/CPoDPO.txt">abstract</a>. 
+  </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry and Applications</I></font>
+   Seminar TUB, 12 April 2023.
+   <a href="talks/23/GGEGA.txt">Abstract</a>. <!--&nbsp; <a href="talks/23/TUB.pdf">text of talk</a>.-->
+  </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Critical Points Of Discrete Periodic Operators</I></font>
+   Seminar, TU Braunschweig, 11 April 2023.
+   <a href="talks/23/CPoDPO.txt">abstract</a>.  &nbsp; <!-- <a href="talks/23/JMM.pdf">text of talk</a>.-->
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry and Applications</I></font>
+   <a href="https://sites.google.com/view/sfsuagc">Algebra, Geometry, and Combinatorics Seminar</a>,
+   San Francisco State University, 8 February 2023.
+   <a href="talks/23/GGEGA.txt">Abstract</a>. &nbsp; <a href="talks/23/SFSU.pdf">text of talk</a>.
+  </li>
+  <!---------------------------------------------------------------------------------------->
+   <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>A Murnaghan-Nakayama rule for quantum cohomology of the flag manifold</I></font>
+   Algebra and Combinatorics Seminar, Texas A&amp;M University, 18 November 2022.
+   <a href="talks/22/qMN.txt">Abstract</a>. 
+  </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators via Toric Varieties</I></font>
+   Applied Analysis Seminar, Lousiana State University, 5 April 2022.
+   <a href="talks/22/CPoDPO.txt">abstract</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Toric compactifications and discrete periodic operators</I></font>
+   Mathematical Physics and Harmonic Analysis Seminar, Texas A&amp;M University, 25 February 2022.
+   <a href="talks/22/ToricDPO.txt">abstract</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Euclidean Distance Degree via Mixed Volume</I></font>,
+    University Savoie Mont Blanc,  1 July 2021.
+   <a href="talks/21/EDD.txt">abstract</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Littlewood-Richardson Homotopy Algorithm</I></font>
+   Technische Universit&auml;t Berlin, 26 May 2021.
+   <a href="talks/21/LRH.txt">abstract</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------->
+ <!------------------------------  vvvv   210    vvvv     ---------------------------------->
+ <!---------------------------------------------------------------------------------------->
+  <li>
+   <FONT COLOR="AA00FF"><I>Euclidean Distance Degree via Mixed Volume</I></font>
+   Algebraic Geometry Seminar, Texas A&amp;M University, 26 April 2021.
+   <a href="talks/21/EDD.txt">abstract</a>.
+ </li>
+ <!---------------------------------------------------------------------------------------->
  <!-- -------------------------------------------------------------------------------------->
  <li>
    <FONT COLOR="AA00FF"><I>Compositions of Schubert problems</I></font>,
@@ -1926,6 +2141,7 @@ Jump to <A HREF="#invited">invited talks</A>,
       15 November 2019.
    <A HREF="19/Composed.txt">abstract</A>.
  </li>
+ <!---------------------------------------------------------------------------------------->
  <!---------------------------------------------------------------------------------------->
  <li>
   <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry and Applications</I></font>,
