--- a/teaching.html
+++ b/teaching.html
@@ -135,35 +135,39 @@
 <!------------------------------------------------------------------------------>
  <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
-   <b><FONT SIZE=+1 color=brown>Fall  2024</font></b>
+   <b><FONT SIZE=+1 color=brown>Spring  2025</font></b>
    <table border=0>
    <!---------------------------------------------------------------------------------------------------->
-    <tr valign=top><td><font color=brown>MATH 666</font></td>
-      <td><a href="teaching/24.2/Toric.html">Toric Varieties</a></td>
-      <td align=left><a href="teaching/24.2/Toric.txt">Outline</a> </td>
-      <td colspan=2> Tu-Th 9:35&ndash;10:50. Blocker 206
+    <tr valign=top><td><font color=brown>MATH 666</font>&nbsp;</td>
+      <td><a href="teaching/25.1/RAGA.html">Real Algebraic<br> Geometry for<br>Applications</a></td>
+      <td align=left>&nbsp;<a href="teaching/25.1/RAGA.txt">Sketch</a> </td>
+      <td colspan=2> Tu-Th 11:10&ndash;12:25.</td><td> Blocker 628
       </td>
     </tr>
-    <!-------------------------------------------------->
-    <tr valign=top><td colspan=3 rowspan=2><font color=blue><b>Office Hours:</b></font> Blocker 601L</td>
-     <td> Mondays </td><td>14:00-15:00 </td>
+     <!-------------------------------------------------->
+    <tr valign=top><td colspan=3 rowspan=1><font color=blue><b>Office Hours:</b></font> Blocker 601L</td>
+     <td>  </td><td> </td>
     </tr>
     <!-------------------------------------------------->
-     <tr><td>  Tuesdays </td><td>11:00-12:00 </td> </tr>
+<!--     <tr><td>  Tuesdays </td><td>11:00-12:00 </td> </tr>-->
+     <!-------------------------------------------------->
+     <tr><td></td><td colspan=4><hr></td></tr>
     <!-------------------------------------------------->
    <tr valign=top>
-     <td colspan=1 rowspan=4><font color=blue><b>Advising:</b></font></td>
-     <td colspan=2 rowspan=4>Blocker 601L</td>
-     <td> Mondays </td><td>13:00-14:00 </td>
+     <td colspan=3><font color=blue><b>Honors Advising:</b></font></td>
+     <td> </td><td></td>
     </tr>
     <!-------------------------------------------------->
-     <tr><td> Tuesday </td><td>17:00-18:00  </td> </tr>
+     <tr valign=top><td rowspan=3></td>     <td colspan=2 rowspan=3>Blocker 601L</td>
+      <td>  </td><td> </td> </tr>
     <!-------------------------------------------------->
-     <tr><td> Wednesday </td><td>17:00-18:00 </td> </tr>
+<!--     <tr><td> Wednesday </td><td>17:00-18:00 </td> </tr> -->
     <!-------------------------------------------------->
-     <tr><td> Thursday </td><td>17:00-18:00 </td> </tr>
+<!--     <tr><td> </td><td>17:00-18:00 </td> </tr>-->
     <!---------------------------------------------------------------------------------------------------->
   </table>
+  <!---------------------------------------------------------------------------------------------------->
+
  <!---------------------------------------------------------------------------------------------------->
 
 
